# chora_engine

./: .gitignore  .travis.yml  CMakeLists.txt  CREDITOS  CREDITOS~  Chora.hpp  Exception.hpp  LICENSE  Makefile  Makefile.mingw  Pesquisas  README.md  animation.cpp  animation.cpp~  animation.hpp  animation.hpp~  background.cpp  background.hpp  bitbucket-pipelines.yml  camera.cpp  camera.cpp~  camera.hpp  camera.hpp~  collision.cpp  collision.hpp  movable.cpp  movable.hpp  projects  sdl.hpp  sprite.cpp  sprite.hpp  statemachine.cpp  statemachine.hpp  textureid.cpp  textureid.hpp  texturer.cpp  texturer.hpp  util.cpp  util.cpp~  util.hpp  (+2 more)
Pesquisas/: Button (computing) - Wikipedia, the free encyclopedia.html  Programacao em GUI_Widgets - Wikilivros.html  Widget - Wikipedia, a enciclopedia livre.html
Pesquisas/Button (computing) - Wikipedia, the free encyclopedia_arquivos/: load_002.php
Pesquisas/Programacao em GUI_Widgets - Wikilivros_arquivos/: load.css  load_002.css  load_002.php  load_003.css
Pesquisas/Widget - Wikipedia, a enciclopedia livre_arquivos/: load.css  load_002.css  load_002.php  load_003.css
SDL_gfx/: SDL_framerate.cpp  SDL_framerate.hpp  SDL_gfxBlitFunc.cpp  SDL_gfxBlitFunc.hpp  SDL_gfxPrimitives.cpp  SDL_gfxPrimitives.hpp  SDL_rotozoom.cpp
fonter/: 20db.txt  Makefile  Makefile~  font50.json~  fonter  fonter.cpp  fonter.cpp~  fonterJSON  fonterJSON.cpp  fonterJSON.cpp~
game/: Elements.cpp  Elements.hpp  ElementsNEW.cpp  ElementsNEW.hpp  Entity.cpp  Entity.hpp  EntityCollision.cpp  Input.cpp  Input.hpp  Key.cpp  Key.hpp  Node.cpp  Node.hpp  Timer.hpp  json.hpp
game/Camera/: CameraRectFocus.cpp  CameraRectFocus.hpp
gui/: bar.cpp  bar.hpp  button.cpp  button.hpp  label.cpp  label.cpp~  label.hpp  textinput.cpp  textinput.hpp  widget.cpp  widget.hpp  writer.cpp  writer.cpp~  writer.hpp  writer.hpp~
include/: Exception.hpp  animation.hpp  background.hpp  camera.hpp  collision.hpp  movable.hpp  renderer.hpp  sprite.hpp  statemachine.hpp  texturer.hpp  util.hpp  vect.hpp
other/: chora_TODO.txt  chora_TODO.txt~  chora_version.txt  chora_version.txt~
physics/: RigidBody.hpp  Shape.hpp  Space.hpp
platform/: tilemap.cpp  tilemap.cpp~  tilemap.hpp  tilemapview.cpp  tilemapview.cpp~  tilemapview.hpp
sdl_gfx/old/: SDL_rotozoom.hpp
sound/: soundplayer.cpp  soundplayer.hpp
spriter/: spriter.cpp
src/: Exception.cpp  animation.cpp  background.cpp  camera.cpp  collision.cpp  movable.cpp  renderer.cpp  sprite.cpp  statemachine.cpp  textureid.cpp  texturer.cpp  util.cpp
tests/: Main.cpp~  map.txt~  platformer.cpp~
tests/GUI/: testLabel  testLabel.cpp  textinput.cpp
tests/Platformer/: .gitignore  Makefile  Makefile~  map.txt  map.txt~  platformer  platformer.cpp  platformer.cpp~  platformerAntigo
tests/Programitor/: InfoFile.cpp  InfoFile.hpp  Makefile  Programitor  Programitor.cpp  Texture.cpp  Texture.hpp
tests/TextureManager/: .swp  Main.cpp  Main.cpp~  Makefile  Teste  a.out
tests/Util/: Makefile  Makefile~  animacao  animacao.cpp  animacao.cpp~  intersect  intersect.cpp  intersect.cpp~  label  label.cpp  label.cpp~  util_test  util_test.cpp  util_test.cpp~
tests/chora3_NOVO/: ElementsNEW.cpp
tests/tilemap/: imagem.xpm  tilemap_load  tilemap_load.cpp
